--- a/blocks/input/input.styl
+++ b/blocks/input/input.styl
@@ -1,19 +1,15 @@
-.input {
-    margin: 0 3px;
-    display: inline-block;
-    height: 28px;
-    padding: 0 30px 0 3px;
-    border: 1px ridge rgba(0,0,0,0.2);
-    outline: none;
-    box-sizing: border-box;
-    background: #fff;
+.input_size-S {
+    input_skin_base-mixin($height = 26px)
+}
 
-    &__control{
-        width 100%
-        height 100%
-        border none
-        padding 0
-        margin 0
-        outline none
-    }
+.input_size-M {
+    input_skin_base-mixin($height = 30px)
+}
+
+.input_size-L {
+    input_skin_base-mixin($height = 34px)
+}
+
+.input_size-XL {
+    input_skin_base-mixin($height = 38px)
 }
