--- a/blocks/chart/chart.styl
+++ b/blocks/chart/chart.styl
@@ -1,38 +1,50 @@
 .chart {
 
-    svg {
-        font: 10px sans-serif;
-    }
+    &__view {
 
-    .focus {
+        svg {
+            font: 10px sans-serif;
+            width: 100%;
+        }
+
+        .chart__focus {
+            .area {
+                stroke: #EEEEEE;
+            }
+        }
         .area {
-            stroke: #9ccc65;
             fill: #7cb342;
         }
-    }
-    .area {
-        fill: #7cb342;
+
+        .axis path, .axis line {
+            fill: none;
+            stroke: #212121;
+            shape-rendering: crispEdges;
+        }
+        .axis text {
+            font-weight: 700;
+            color: #212121;
+        }
+
+        .brush .extent {
+            /*stroke: #EEEEEE;*/
+            fill-opacity: .3;
+        }
+
     }
 
-    .axis path, .axis line {
-        fill: none;
-        stroke: #212121;
-        shape-rendering: crispEdges;
-    }
-    .axis text {
-        font-weight: 700;
-        color: #212121;
+    &__days {
+        width: 100%;
+        height: 50px;
+        padding: 0 40px;
+        box-sizing: border-box;
     }
 
-    .brush .extent {
-        stroke: #fff;
-        fill-opacity: .1;
-        shape-rendering: crispEdges;
-    }
 }
 
 @css {
-    .chart .area {
+    .chart__view .area {
         clip-path: url("#clip");
+        fill: url("#lineGradient");
     }
 }
