--- a/blocks/page/page.styl
+++ b/blocks/page/page.styl
@@ -4,6 +4,6 @@
     height: 100vh;
     width: 100vw;
     position: relative;
-    overflow: hidden;
+    /*overflow: hidden;*/
     font-family: Arial, Helvetica, sans-serif
 }
